# Basilisk

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  PySentinel_EDR_v3.spec  PySentinel_EDR_v4.2.spec  PySentinel_EDR_v5.0_Enterprise.spec  PySentinel_HIDS.spec  README.md  SECURITY.md  agent_core.py  attack_sim.py  config.example.yaml  docker-compose.yml  gui.py  pyproject.toml  requirements.txt  run.py  run_agent.py  run_server.py  server_logs.txt  setup.py
.github/workflows/: ci.yml
PySentinel_Server/: server.py
PySentinel_Server/static/: index.html  login.html
agent/: PySentinel_EDR_v5.0_Enterprise.spec  agent_core.py
basilisk/: __init__.py
basilisk/agent/: engine.py
basilisk/core/: active_response.py  config.py  database.py  schemas.py  security.py
basilisk/modules/: anti_ransomware.py  audit_scanner.py  fim.py  log_watcher.py  memory_scanner.py  network_isolation.py  network_monitor.py  port_monitor.py  process_monitor.py  registry_monitor.py  threat_intel.py  usb_monitor.py  win_event_watcher.py  yara_scanner.py
basilisk/rules/: index.yar
basilisk/server/: database.py  server.py
basilisk/server/static/: index.html  login.html
basilisk/server/static/css/: dashboard.css  login.css
basilisk/server/static/js/: dashboard.js  login.js
basilisk/server/templates/: index.html  login.html
basilisk/utils/: cert_manager.py  logger.py  notifier.py  pdf_generator.py  system_monitor.py
pysentinel/: __init__.py
pysentinel/core/: active_response.py  config.py  database.py
pysentinel/modules/: anti_ransomware.py  fim.py  log_watcher.py  network_monitor.py  port_monitor.py  process_monitor.py  registry_monitor.py  threat_intel.py  usb_monitor.py  win_event_watcher.py  yara_scanner.py
pysentinel/rules/: index.yar
pysentinel/utils/: logger.py  notifier.py  pdf_generator.py  system_monitor.py
server/: server.py  server_persistence.py
server/static/: index.html  login.html
tests/: test_active_response.py  test_fim.py  test_flow.py  test_full_suite.py  test_integration.py  test_smoke.py  test_system_monitor.py
